rstsr-aocl-ffi/header/cblas.h

typedef int32_t   f77_int;
typedef int64_t   f77_int;
typedef long int  f77_int;
void BLIS_EXPORT_BLAS cblas_sgemmt(enum CBLAS_ORDER Order, enum CBLAS_UPLO Uplo,
         enum CBLAS_TRANSPOSE TransA, enum CBLAS_TRANSPOSE TransB,
         f77_int N, f77_int K, float alpha, const float *A,
                 f77_int lda, const float *B, f77_int ldb,
                 float beta, float *C, f77_int ldc);
void BLIS_EXPORT_BLAS cblas_dgemmt(enum CBLAS_ORDER Order, enum CBLAS_UPLO Uplo,
         enum CBLAS_TRANSPOSE TransA, enum CBLAS_TRANSPOSE TransB,
         f77_int N, f77_int K, double alpha, const double *A,
                 f77_int lda, const double *B, f77_int ldb,
                 double beta, double *C, f77_int ldc);
void BLIS_EXPORT_BLAS cblas_cgemmt(enum CBLAS_ORDER Order, enum CBLAS_UPLO Uplo,
         enum CBLAS_TRANSPOSE TransA, enum CBLAS_TRANSPOSE TransB,
         f77_int N, f77_int K, const void *alpha, const void *A,
                 f77_int lda, const void *B, f77_int ldb,
                 const void *beta, void *C, f77_int ldc);
void BLIS_EXPORT_BLAS cblas_zgemmt(enum CBLAS_ORDER Order, enum CBLAS_UPLO Uplo,
         enum CBLAS_TRANSPOSE TransA, enum CBLAS_TRANSPOSE TransB,
         f77_int N, f77_int K, const void *alpha, const void *A,
                 f77_int lda, const void *B, f77_int ldb,
                 const void *beta, void *C, f77_int ldc);